# cryptographic_protection_methods

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
ciphers/block/: const.py  gost_34_12_2015.py  gost_34_13_2015.py  utils.py
ciphers/substitution/: algorithm.py
ciphers/transposition/: algorithm.py
replacement_method/: README.md
replacement_method/replacement_method/: algorithm.py  app.py
scripts/: flet_pack.sh  flet_pack_app.sh  poetry_export.sh  pyproject_to_requirements.sh  run_tests.sh
src/cipher/: abc.py
src/cipher/replacement/: trisemus.py
src/cipher/substitution/: README.md  algorithm.py
src/cipher/transposition/: README.md  algorithm.py
src/gamma_method/: README.md
src/permutation_method/: README.md
src/replacement_method/: README.md  algorithm.py  app.py  main.py
src/ui/: __main__.py  base.py  main.py
src/ui/controls/: substitution_cipher.py  transposition_cipher.py  trisemus_replacement_cipher.py
tests/: test_block_cipher.py  test_substitution_cipher.py  test_transposition_cipher.py
tests/replacement_cipher/: test_algortithm.py
tests/replacement_method/: test_algortithm.py
