[tool.poetry]
name = "cryptographic-protection-methods"
version = "0.1.0"
description = ""
authors = ["coolworld2049 <coolworld2049@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
flet = "^0.20.2"
flet-fastapi = "^0.20.2"
uvicorn = {extras = ["standart"], version = "^0.27.1"}


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
